syntax = "proto3";
package pb;

option go_package = "./";

message Request {
  string key = 1;
  bytes value = 2;
}

message ResponseForGet {
  bytes value = 1;
}

message ResponseForDelete {
  bool value = 1;
}

service lcache_pro {
  rpc Get(Request) returns (ResponseForGet);
  rpc Set(Request) returns (ResponseForGet);
  rpc Delete(Request) returns(ResponseForDelete);
}